tests/vertical-slice/accept/bytes_slice_closed.hew
extern "C" {
    fn hew_bytes_from_str(s: string) -> bytes;
}

fn main() -> i64 {
    let b: bytes = unsafe { hew_bytes_from_str("abcd") };
    let slice: bytes = b[1..3];
    println(slice.to_string());
    slice.len()
}
